--- a/MOFAtools/vignettes/MOFA_example_simulated.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_simulated.Rmd
@@ -28,9 +28,10 @@ Once the untrained MOFAobject was created, we can specify details on data proces
 Using 'prepareMOFA' the model is set up for training.
 ```{r}
 TrainOptions <- getDefaultTrainOptions()
-TrainOptions$DropFactorThreshold <- 0.01
 ModelOptions <- getDefaultModelOptions(MOFAobject)
 DataOptions <- getDefaultDataOptions()
+
+TrainOptions$DropFactorThreshold <- 0.01
 
 MOFAobject <- prepareMOFA(
   MOFAobject, 
@@ -43,7 +44,7 @@ MOFAobject <- prepareMOFA(
 # Run MOFA
 Once the MOFAobject is set up we can use runMOFA to train the model. As depending on the random initilization the results might differ, we recommend to use runMOFA multiple times (e.g. ten times, here we use a smaller number for illustration as the model training takes some time) and as a next step select the best model in the next step.
 ```{r}
-n_inits <- 1
+n_inits <- 3
 MOFAlist <- lapply(1:n_inits, function(it) {
   runMOFA(MOFAobject, outfile=tempfile())
 })
@@ -53,7 +54,7 @@ MOFAlist <- lapply(1:n_inits, function(it) {
 # Compare different random inits and select the best model
 Having a list of trained models we can use 'compareModels' to get an overview of how many factors were inferred in each run and what the optimized ELBO value is (a model with larger ELBO is preferred). With 'compareFactors' we can get an overview of how robust the factors are between different model instances.
 
-For down-stream analyses we recommned to choose the model with the best ELBO value as is done by 'selectModel.
+For down-stream analyses we recommned to choose the model with the best ELBO value as is done by 'selectModel'.
 ```{r}
 compareModels(MOFAlist)
 compareFactors(MOFAlist)
